# meta-something

./: CMakeLists.txt  README.md  main.cpp
meta/: CMakeLists.txt
meta/cmake/: FindLibClang.cmake
meta/tool/: tool.cpp  tool.hpp
